# AtariBreakout

./: README.md  main.py  pyproject.toml  settings.toml
src/: Ball.py  Brick.py  Paddle.py  Rectangle.py
utils/: level_generator.py
