[tool.poetry]
name = "ataribreakout"
version = "0.1.0"
description = "A python clone for the popular atari breakout game using pygame"
authors = ["Aditya Jyoti <aj.adityajyoti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
